--- a/boiler-plate/package.json
+++ b/boiler-plate/package.json
@@ -4,12 +4,13 @@
   "description": "This is...",
   "main": "index.js",
   "scripts": {
-	"start": "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kermit1727",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.3"
   }
 }
